<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="5dp"
    android:gravity="center">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/exitss"

            android:textColor="@color/black"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/exitss1"
            android:textColor="@color/black"
            android:textSize="18.0sp" />


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:layout_marginBottom="20.0dip"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/yes"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:foreground="@drawable/annimations2"
                android:gravity="center"
                android:text="@string/rating_dialog_submit_exit"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rate"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn"
                android:foreground="@drawable/annimations2"
                android:gravity="center"
                android:text="@string/rate"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

        <ImageView

            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:foreground="@drawable/ripple"
            android:padding="7dp"
            android:src="@drawable/ic_close_" />
    </RelativeLayout>
</RelativeLayout>








