<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <RelativeLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_bg">

            <RelativeLayout
                android:id="@+id/rr_disc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/img_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:elevation="10dp"
                        android:foreground="@drawable/ripple"
                        android:padding="10dp"
                        android:src="@drawable/ic_close_"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:layout_marginTop="-25dp"
                        android:src="@drawable/no_internet_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:text="@string/nointernet"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="30dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/nointernetconnection"
                        android:textColor="@color/black"
                        android:textSize="18sp" />


                </LinearLayout>


            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rr_disc"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView

                    android:id="@+id/wifi"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="7dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn"
                    android:fontFamily="sans-serif-medium"
                    android:foreground="@drawable/annimations2"
                    android:gravity="center"
                    android:text="@string/tryagain"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

                <TextView

                    android:id="@+id/data"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn"
                    android:fontFamily="sans-serif-medium"
                    android:foreground="@drawable/annimations2"
                    android:gravity="center"
                    android:text="@string/data"
                    android:textColor="@color/white"
                    android:textSize="25dp" />

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>