<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rate_white_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:foreground="@drawable/ripple"
                android:padding="10dp"
                android:src="@drawable/ic_close_" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:src="@drawable/rate_icon" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:gravity="center_horizontal"
            android:text="@string/rate_us"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10.0dip"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/rate_content"
            android:textColor="@color/white"
            android:textSize="16.0sp" />


<!--        <TextView-->

<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:fontFamily="sans-serif-medium"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/ratings2"-->
<!--            android:textColor="#8D8D8D"-->
<!--            android:textSize="18.0sp" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_star1"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:foreground="@drawable/ripple"
                android:src="@drawable/star1" />

            <ImageView
                android:id="@+id/iv_star2"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:foreground="@drawable/ripple"
                android:src="@drawable/star1" />

            <ImageView
                android:id="@+id/iv_star3"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:foreground="@drawable/ripple"
                android:src="@drawable/star1" />

            <ImageView
                android:id="@+id/iv_star4"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:foreground="@drawable/ripple"
                android:src="@drawable/star2" />

            <ImageView
                android:id="@+id/iv_star5"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:foreground="@drawable/ripple"
                android:src="@drawable/star2" />


        </LinearLayout>

        <TextView

            android:id="@+id/tv_review"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="erfee"
            android:textSize="20dp"
            android:textStyle="bold"
            android:visibility="gone" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20.0dip"
            android:layout_marginBottom="15.0dip"
            android:gravity="center"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/shareapp"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/white_bg"
                android:foreground="@drawable/annimations2"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/black"
                    android:text="@string/shareapp"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ratenow"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/blue_backg"
                android:foreground="@drawable/annimations2"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/white"
                    android:text="@string/rate_now"
                    android:textSize="20dp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>








